a few updates to vimrc and p10k

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,10 +1,27 @@
-# Start windows & panes at 1, not 0
+# Start windows & panes at 1, not 0, to match keyboard order w/ tmux window num.
  set -g base-index 1 
  set -g pane-base-index 1
+ setw -g base-index 1
+ setw -g pane-base-index 1
+
+ # Remember windows sequentially after closing any of them
+ set -g renumber-windows on
 
  set-option -g status-position top
 
  set-option -g repeat-time 0
+
+# increase scrollback lines
+ set -g history-limit 99999
+
+# Pane resizing
+bind ( resize-pane -L 5
+bind ) resize-pane -R 5
+bind - resize-pane -D 5
+bind + resize-pane -U 5
+
+
+
 
 # Remove ESC delay
  set -sg escape-time 0
