changed a fx in tmux.conf

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -4,10 +4,13 @@
  setw -g base-index 1
  setw -g pane-base-index 1
 
+# Setting prefix from C-b to C-a
+ set -g prefix C-a
+
 # remap prefix from 'C-b' to 'C-a'
-unbind C-b
-set-option -g C-a
-bind-key C-a send-prefix
+# unbind C-b
+# set-option -g prefix C-a
+# bind-key C-a send-prefix
 
 
  # Remember windows sequentially after closing any of them
@@ -37,11 +40,11 @@ bind -n C-l run "(tmux display-message -p '#{pane_current_command}' | grep iq nv
 
 bind -n C-\ run "(tmux display-message -p '#{pane_current_command}' | grep iq nvim && tmux send-keys 'C-\\') || tmux select-pane -l""')"
 
+
+
 # Remove ESC delay
  set -sg escape-time 0
 
-# Setting prefix from C-b to C-a
- set -g prefix C-a
 
 # List of plugins
 set -g @tpm_plugins '                       \
