--- a/.tmux.conf
+++ b/.tmux.conf
@@ -13,6 +13,8 @@
 # bind-key C-a send-prefix
 
 
+set -g mouse on
+
  # Remember windows sequentially after closing any of them
  set -g renumber-windows on
 
@@ -29,16 +31,16 @@ bind ) resize-pane -R 5
 bind - resize-pane -D 5
 bind + resize-pane -U 5
 
-# smart pane switching with awareness of vimsplits
-bind -n C-h run "(tmux display-message -p '#{pane_current_command}' | grep iq nvim && tmux send-keys C-h) || tmux select-pane -L"
+# # smart pane switching with awareness of vimsplits
+# bind -n C-h run "(tmux display-message -p '#{pane_current_command}' | grep iq nvim && tmux send-keys C-h) || tmux select-pane -L"
 
-bind -n C-j run "(tmux display-message -p '#{pane_current_command}' | grep iq nvim && tmux send-keys C-j) || tmux select-pane -D"
+# bind -n C-j run "(tmux display-message -p '#{pane_current_command}' | grep iq nvim && tmux send-keys C-j) || tmux select-pane -D"
 
-bind -n C-k run "(tmux display-message -p '#{pane_current_command}' | grep iq nvim && tmux send-keys C-k) || tmux select-pane -U"
+# bind -n C-k run "(tmux display-message -p '#{pane_current_command}' | grep iq nvim && tmux send-keys C-k) || tmux select-pane -U"
 
-bind -n C-l run "(tmux display-message -p '#{pane_current_command}' | grep iq nvim && tmux send-keys C-l) || tmux select-pane -R"
+# bind -n C-l run "(tmux display-message -p '#{pane_current_command}' | grep iq nvim && tmux send-keys C-l) || tmux select-pane -R"
 
-bind -n C-\ run "(tmux display-message -p '#{pane_current_command}' | grep iq nvim && tmux send-keys 'C-\\') || tmux select-pane -l""')"
+# bind -n C-\ run "(tmux display-message -p '#{pane_current_command}' | grep iq nvim && tmux send-keys 'C-\\') || tmux select-pane -l""')"
 
 
 
