added junegunn/tmux-fzf-maccy to tmux, changed a bunch of shit in vimrc and zshrc. yeah. need to do better commit messages lol

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -15,15 +15,15 @@
 
 set -g mouse on
 
- # Remember windows sequentially after closing any of them
- set -g renumber-windows on
+# Remember windows sequentially after closing any of them
+set -g renumber-windows on
 
- set-option -g status-position top
+set-option -g status-position top
 
- set-option -g repeat-time 0
+set-option -g repeat-time 0
 
 # increase scrollback lines
- set -g history-limit 99999
+set -g history-limit 99999
 
 # Pane resizing
 bind ( resize-pane -L 5
@@ -50,6 +50,7 @@ bind + resize-pane -U 5
 
 # List of plugins
 set -g @tpm_plugins '                       \
+        junegunn/tmux-fzf-maccy             \
         caiogondim/maglev                   \
         tmux-plugins/tpm                    \
         tmux-plugins/tmux-sensible          \
