added prefixes for fzf-tmux-maccy

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -6,7 +6,9 @@
 
 # Setting prefix from C-b to C-a
  set -g prefix C-a
+ set -g @fzf-maccy-bind '@'
 
+ set -g @fzf-maccy-layout '-p70%'
 # remap prefix from 'C-b' to 'C-a'
 # unbind C-b
 # set-option -g prefix C-a
