added 'set -g default terminal screen-256color to tmux.conf'

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -14,7 +14,7 @@
 # set-option -g prefix C-a
 # bind-key C-a send-prefix
 
-
+set -g default-terminal "screen-256color"
 set -g mouse on
 
 # Remember windows sequentially after closing any of them
