changing a few nvim completion things, using native-lsp is a little more difficult than anticipated. keymapping issues. Added vi-mode for copy-mode in tmux, & aggressive win resizing

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -4,28 +4,58 @@
  setw -g base-index 1
  setw -g pane-base-index 1
 
+# Rather than constraining win size to max. size of any client connected to the 
+# *session*, constrain win size to the max. size of any client connected to * that window *
+# Much more reasonable.
+setw -g aggressive-resize on
+
+# Tile all windows
+unbind = 
+bind = select-layout tiled
+
+set-option -g set-titles on
+set-option -g set-titles-string "#T - #W"
+
+# Remember windows sequentially after closing any of them
+set -g renumber-windows on
+
+# Synchronize all panes in a win
+bind yY setw synchronize-panes
+
+# set vi mode for copy mode
+setw -g mode-keys vi
+
+# more settings to make copy-mode more vim-esque
+unbind [
+bind Escape copy-mode
+unbind p
+bind p paste-buffer
+bind -Tcopy-mode-vi 'v' send -X begin-selection
+bind -Tcopy-mode-vi 'y' send -X copy-pipe-and-cancel "tmux save-buffer - | reattach-to-user-namespace pbcopy"
+
+# Buffers to/from mac clipboard, yay pragprog tmux book reading!
+bind C-c run "tmux save-buffer - | reattach-to-user-namespace pbcopy"
+bind C-v run "tmux set-buffer $(reattach-to-user-namespace pbpaste); tmux paste-buffer"
+
+
+
 # Setting prefix from C-b to C-a
  set -g prefix C-a
  set -g @fzf-maccy-bind '@'
 
  set -g @fzf-maccy-layout '-p70%'
-# remap prefix from 'C-b' to 'C-a'
-# unbind C-b
-# set-option -g prefix C-a
-# bind-key C-a send-prefix
 
 set -g default-terminal "screen-256color"
+
 set -g mouse on
 
-# Remember windows sequentially after closing any of them
-set -g renumber-windows on
 
 set-option -g status-position top
 
 set-option -g repeat-time 0
 
 # increase scrollback lines
-set -g history-limit 99999
+set -g history-limit 20000
 
 # Pane resizing
 bind ( resize-pane -L 5
