temporarily turned off aggressive resize as it's incompat w/ iTerm2

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -7,7 +7,7 @@
 # Rather than constraining win size to max. size of any client connected to the 
 # *session*, constrain win size to the max. size of any client connected to * that window *
 # Much more reasonable.
-setw -g aggressive-resize on
+# setw -g aggressive-resize on
 
 # Tile all windows
 unbind = 
