--- a/.tmux.conf
+++ b/.tmux.conf
@@ -7,11 +7,13 @@
 # Rather than constraining win size to max. size of any client connected to the 
 # *session*, constrain win size to the max. size of any client connected to * that window *
 # Much more reasonable.
+# Cant be used w/ iTerm2
 # setw -g aggressive-resize on
 
 # Tile all windows
 unbind = 
 bind = select-layout tiled
+
 
 set-option -g set-titles on
 set-option -g set-titles-string "#T - #W"
@@ -20,10 +22,14 @@ set-option -g set-titles-string "#T - #W"
 set -g renumber-windows on
 
 # Synchronize all panes in a win
-bind yY setw synchronize-panes
+bind y setw synchronize-panes
 
 # set vi mode for copy mode
 setw -g mode-keys vi
+set -g status-keys vi
+
+# reload tmux.conf w/ key press
+bind r source-file ~/.tmux.conf \; display "Reloaded!"
 
 # more settings to make copy-mode more vim-esque
 unbind [
@@ -45,7 +51,8 @@ bind C-v run "tmux set-buffer $(reattach-to-user-namespace pbpaste); tmux paste-
 
  set -g @fzf-maccy-layout '-p70%'
 
-set -g default-terminal "screen-256color"
+set -g default-terminal "tmux-256color"
+set -ga terminal-overrides ".*256col*:Tc"
 
 set -g mouse on
 
