termcap info error with kitty regarding setting a default-terminal

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -51,8 +51,8 @@ bind C-v run "tmux set-buffer $(reattach-to-user-namespace pbpaste); tmux paste-
 
  set -g @fzf-maccy-layout '-p70%'
 
-set -g default-terminal "tmux-256color"
-set -ga terminal-overrides ".*256col*:Tc"
+# set -g default-terminal "tmux-256color"
+# set -ga terminal-overrides ".*256col*:Tc"
 
 set -g mouse on
 
