changed how plugins loaded, hopefully it works, along with the added FZF Integration key bindings

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -36,12 +36,21 @@ unbind [
 bind Escape copy-mode
 unbind p
 bind p paste-buffer
-bind -Tcopy-mode-vi 'v' send -X begin-selection
-bind -Tcopy-mode-vi 'y' send -X copy-pipe-and-cancel "tmux save-buffer - | reattach-to-user-namespace pbcopy"
+bind -T copy-mode-vi 'v' send -X begin-selection
+bind -T copy-mode-vi 'y' send -X copy-pipe-and-cancel "tmux save-buffer - | reattach-to-user-namespace pbcopy"
 
 # Buffers to/from mac clipboard, yay pragprog tmux book reading!
 bind C-c run "tmux save-buffer - | reattach-to-user-namespace pbcopy"
 bind C-v run "tmux set-buffer $(reattach-to-user-namespace pbpaste); tmux paste-buffer"
+
+
+## Testing FZF Integration
+# Tmux completion
+bind-key t run-shell 'tmux send-keys -t #{pane_id} "$(tmux-fzf-words)"'
+bind-key T run-shell 'tmux send-keys -t #{pane_id} "$(tmux-fzf-words -all)"'
+
+# select pane
+bind-key 0 run-shell "tmux-fzf-panes ||:"
 
 
 
@@ -52,7 +61,7 @@ bind C-v run "tmux set-buffer $(reattach-to-user-namespace pbpaste); tmux paste-
  set -g @fzf-maccy-layout '-p70%'
 
 # set -g default-terminal "tmux-256color"
-# set -ga terminal-overrides ".*259col*:Tc"
+set -ga terminal-overrides ",*256col*:Tc"
 
 set -g mouse on
 
@@ -84,20 +93,18 @@ bind + resize-pane -U 5
 
 
 # List of plugins
-set -g @tpm_plugins '                       \
-        junegunn/tmux-fzf-maccy             \
-        caiogondim/maglev                   \
-        tmux-plugins/tpm                    \
-        tmux-plugins/tmux-sensible          \
-        tmux-plugins/tmux-resurrect         \
-        tmux-plugins/tmux-continuum         \
-        tmux-plugins/tmux-yank              \
-        tmux-plugins/tmux-pain-control      \
-        tmux-plugins/tmux-copycat           \
-        tmux-plugins/tmux-open              \
-        tmux-plugins/tmux-cpu               \
-        tmux-plugins/tmux-prefix-highlight  \
-'
+set -g @tpm_plugins 'tmux-plugins/tpm'
+set -g @tpm_plugins 'junegunn/tmux-fzf-maccy'
+set -g @tpm_plugins 'caiogondim/maglev'
+set -g @tpm_plugins 'tmux-plugins/tmux-sensible'
+set -g @tpm_plugins 'tmux-plugins/tmux-resurrect'
+set -g @tpm_plugins 'tmux-plugins/tmux-continuum'
+set -g @tpm_plugins 'tmux-plugins/tmux-yank'
+set -g @tpm_plugins 'tmux-plugins/tmux-pain-control'
+set -g @tpm_plugins 'tmux-plugins/tmux-copycat'
+set -g @tpm_plugins 'tmux-plugins/tmux-open'
+set -g @tpm_plugins 'tmux-plugins/tmux-cpu'
+set -g @tpm_plugins 'tmux-plugins/tmux-prefix-highlight'
 
 if "test! -d ~/.tmux/plugins/tpm" \
    "run 'git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm && \
