--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,3 +1,22 @@
+set-option -g status-position top
+set-option -sg escape-time 0
+# List of plugins
+set -g @tpm_plugins 
+set -g @tpm_plugins '                     \
+    caiogondim/maglev                     \
+    tmux-plugins/tpm                      \
+    tmux-plugins/tmux-sensible            \
+    tmux-plugins/tmux-resurrect           \
+    tmux-plugins/tmux-continuum           \
+    tmux-plugins/tmux-yank                \
+    tmux-plugins/tmux-pain-control        \
+    tmux-plugins/tmux-copycat             \
+    tmux-plugins/tmux-open                \
+    tmux-plugins/tmux-battery             \
+    tmux-plugins/tmux-cpu                 \
+    tmux-plugins/tmux-prefix-highlight    \
+    junegunn/tmux-fzf-maccy               \
+'
 # Start windows & panes at 1, not 0, to match keyboard order w/ tmux window num.
 set -g base-index 1 
 set -g pane-base-index 1
@@ -22,22 +41,25 @@ set-option -g set-titles-string "#T - #W"
 set -g renumber-windows on
 
 # Synchronize all panes in a win
-bind y setw synchronize-panes
+# bind y setw synchronize-panes
+
 
 # set vi mode for copy mode
-setw -g mode-keys vi
-set -g status-keys vi
 
 # reload tmux.conf w/ key press
-bind r source-file ~/.tmux.conf \; display "Reloaded!"
+bind C-r source-file ~/.tmux.conf \; display "Reloaded!"
 
 # more settings to make copy-mode more vim-esque
-unbind [
-bind Escape copy-mode
-unbind p
-bind p paste-buffer
-bind -T copy-mode-vi 'v' send -X begin-selection
-bind -T copy-mode-vi 'y' send -X copy-pipe-and-cancel "tmux save-buffer - | reattach-to-user-namespace pbcopy"
+setw -g mode-keys vi
+bind -T copy-mode-vi v send -X begin-selection
+bind -T copy-mode-vi y send -X copy-pipe-and-cancel "pbcopy"
+unbind -T copy-mode-vi Enter
+bind-key -T copy-mode-vi Enter send -X copy-pipe-and-cancel "pbcopy"
+unbind -T copy-mode-vi Space
+bind -T copy-mode-vi Space send -X jump-again
+bind-key -T copy-mode-vi 0 send -X back-to-indentation
+# bind y run 'tmux save-buffer - | pbcopy '
+# bind C-y run 'tmux save-buffer - | pbcopy '
 
 # Buffers to/from mac clipboard, yay pragprog tmux book reading!
 bind C-c run "tmux save-buffer - | reattach-to-user-namespace pbcopy"
@@ -55,19 +77,18 @@ bind-key 0 run-shell "tmux-fzf-panes ||:"
 
 
 # Setting prefix from C-b to C-a
- set -g prefix C-a
- set -g @fzf-maccy-bind '@'
+set -g prefix C-a
+bind C-a send-prefix
+unbind C-b
 
- set -g @fzf-maccy-layout '-p70%'
+set -g @fzf-maccy-bind '@'
 
-# set -g default-terminal "tmux-256color"
-set -ga terminal-overrides ",*256col*:Tc"
+set -g @fzf-maccy-layout '-p70%'
+
+set -g default-terminal "screen-256color"
+# set -ga terminal-overrides ",*256col*:Tc"
 
 set -g mouse on
-
-
-set-option -g status-position top
-
 set-option -g repeat-time 0
 
 
@@ -92,24 +113,9 @@ bind + resize-pane -U 5
 
 
 
-# List of plugins
-set -g @tpm_plugins 'tmux-plugins/tpm'
-set -g @tpm_plugins 'junegunn/tmux-fzf-maccy'
-set -g @tpm_plugins 'caiogondim/maglev'
-set -g @tpm_plugins 'tmux-plugins/tmux-sensible'
-set -g @tpm_plugins 'tmux-plugins/tmux-resurrect'
-set -g @tpm_plugins 'tmux-plugins/tmux-continuum'
-set -g @tpm_plugins 'tmux-plugins/tmux-yank'
-set -g @tpm_plugins 'tmux-plugins/tmux-pain-control'
-set -g @tpm_plugins 'tmux-plugins/tmux-copycat'
-set -g @tpm_plugins 'tmux-plugins/tmux-open'
-set -g @tpm_plugins 'tmux-plugins/tmux-cpu'
-set -g @tpm_plugins 'tmux-plugins/tmux-prefix-highlight'
 
-if "test! -d ~/.tmux/plugins/tpm" \
-   "run 'git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm && \
-   ~/.tmux/plugins/tpm/bin/install_plugins"
+if "test ! -d ~/.tmux/plugins/tpm" \
+   "run 'git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm'"
 
 # Initialize TMUX env is sourced
-run -b '~/.tmux/plugins/tpm/tpm'
-
+run '~/.tmux/plugins/tpm/tpm'
