changed a few items to make things run better, added a few functions

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,7 +1,6 @@
 set-option -g status-position top
 set-option -sg escape-time 0
 # List of plugins
-set -g @tpm_plugins 
 set -g @tpm_plugins '                     \
     caiogondim/maglev                     \
     tmux-plugins/tpm                      \
@@ -85,8 +84,8 @@ set -g @fzf-maccy-bind '@'
 
 set -g @fzf-maccy-layout '-p70%'
 
-set -g default-terminal "screen-256color"
-# set -ga terminal-overrides ",*256col*:Tc"
+# set -g default-terminal "screen-256color"
+# set -ga terminal-overrides ",*256color:Tc"
 
 set -g mouse on
 set-option -g repeat-time 0
