initiated changes for nvim over towards lua

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -15,7 +15,7 @@ map ctrl+k kitten pass_keys.py neighboring_window top    ctrl+k "^.* - nvim$"
 map ctrl+h kitten pass_keys.py neighboring_window left   ctrl+h "^.* - nvim$"
 map ctrl+l kitten pass_keys.py neighboring_window right  ctrl+l "^.* - nvim$"
 
-kitty -o allow_remote_control=yes --listen-on unix:/tmp/mykitty
+kitty --listen-on=unix:/tmp/mykitty
 
 #: Fonts {{{
 
@@ -461,7 +461,7 @@ inactive_text_alpha 0.6
 #: Fade the text in inactive windows by the specified amount (a number
 #: between zero and one, with zero being fully faded).
 
-# hide_window_decorations no
+hide_window_decorations window-borders
 
 #: Hide the window decorations (title-bar and window borders) with
 #: yes. On macOS, titlebar-only can be used to only hide the titlebar.
@@ -538,7 +538,7 @@ tab_separator " "
 #: The separator between tabs in the tab bar when using separator as
 #: the tab_bar_style.
 
-tab_title_template {index}: {title}
+# tab_title_template {index}: {title}
 
 #: A template to render the tab title. The default just renders the
 #: title. If you wish to include the tab-index as well, use something
@@ -573,7 +573,7 @@ tab_title_template {index}: {title}
 
 #: The foreground and background colors
 
-background_opacity 0.97
+# background_opacity 0.97
 
 #: The opacity of the background. A number between 0 and 1, where 1 is
 #: opaque and 0 is fully transparent.  This will only work if
@@ -591,7 +591,7 @@ background_opacity 0.97
 #: change transparency of windows set dynamic_background_opacity to
 #: yes (this is off by default as it has a performance cost)
 
-dynamic_background_opacity no
+dynamic_background_opacity yes
 
 #: Allow changing of the background_opacity dynamically, using either
 #: keyboard shortcuts (increase_background_opacity and
@@ -828,7 +828,7 @@ macos_thicken_font 0.75
 #: Use the traditional full-screen transition, that is faster, but
 #: less pretty.
 
-macos_show_window_title_in window
+macos_show_window_title_in menubar
 
 #: Show or hide the window title in the macOS window or menu-bar. A
 #: value of window will show the title of the currently active window
