--- a/.config/nvim/coc-settings.json
+++ b/.config/nvim/coc-settings.json
@@ -1,8 +1,18 @@
 {
   "coc-actions.useCursorLine": true,
+  "coc-actions.showActionKind": true,
+  "hover.autoHide": true,
+  "snippets.enableStatusItem": true,
   "suggest.noselect": false,
   "suggest.echodocSupport": true,
   "snippets.ultisnips.enable": true,
+  "snippets.priority": 85,
+  // "list.source.buffers.defaultOptions": ["--auto-preview", "--ignore-case"],
+  "snippets.snipmate.enable": true,
+  "snippets.autoTrigger": true,
+  "snippets.loadFromExtensions": true,
+  "suggest.snippetIndicator": "~",
+  "snippets.textmateSnippetsRoots": ["~/.vscode/extensions/cstrap.python-snippets-0.0.9/snippets/"],
   "suggest.enablePreview": true,
   "suggest.autoTrigger": "always",
   "suggest.preferCompleteThanJumpPlaceholder": false,
@@ -62,14 +72,14 @@
         // },
         // }}}
 
-  // "jedi.executable.command": "jedi-language-server",
-  // "jedi.markupKindPreferred": "markdown",
-  // "jedi.startupMessage": true,
-  // "jedi.diagnostics.enable": true,
-  // "jedi.diagnostics.didOpen": false,
-  // "jedi.diagnostics.didSave": true,
+  "jedi.executable.command": "jedi-language-server",
+  "jedi.markupKindPreferred": "markdown",
+  "jedi.startupMessage": true,
+  "jedi.diagnostics.enable": true,
+  "jedi.diagnostics.didOpen": false,
+  "jedi.diagnostics.didSave": true,
   // "jedi.diagnostics.didChange": false,
-  // "jedi.jediSettings.autoImportModules": ["scipy", "numpy", "matplotlib", "pandas", "sklearn", "requests", "beautifulsoup4", "scikit-learn", "sympy", "h5py", "bokeh", "bqplot", "seaborn", "altair", "dask", "asyncio", "os", "sys"],
+  "jedi.jediSettings.autoImportModules": ["scipy", "numpy", "matplotlib", "pandas", "sklearn", "requests", "beautifulsoup4", "scikit-learn", "sympy", "h5py", "bokeh", "bqplot", "seaborn", "altair", "dask", "asyncio", "os", "sys"],
   "python.poetryPath": "poetry",
   "python.analysis.diagnosticEnabled": true,
   "python.autoComplete.addBrackets": true,
@@ -111,20 +121,47 @@
   "julia.format.iterOps": true,
   "julia.lint.typeparam": true,
   "julia.trace.server": "verbose",
-  // "pyright.disableCompletion": false,
-  // "pyright.disableLanguageServices": false,
-  // "pyright.disableOrganizeImports": false,
-  // "markdownlint.config": {
-  //   "default": true,
-  //   "line-length": false
-  // },
+  "pyright.disableCompletion": false,
+  "pyright.disableLanguageServices": false,
+  "pyright.disableOrganizeImports": false,
+  "pyright.completion.snippetSupport": true,
+  "markdownlint.config": {
+    "default": true,
+    "line-length": false
+  },
   "sh.highlightParsingErrors": true,
   "sh.explainshellEndpoint": "http://localhost:5000",
   "sh.trace.server": "verbose",
-  // "yaml.completion": true,
-  // "yaml.hover": true,
+  "yaml.completion": true,
+  "yaml.hover": true,
 
   "languageserver": {
+        "bash": {
+            "command": "bash-language-server",
+            "args": ["start"],
+            "filetypes": ["sh"],
+            "ignoredRootPaths": ["~/Dev/goProj", "~/Dev/pyProj", "~/Dev/Data"]
+        },
+        "Haskell": {
+            "command": "~/.local/bin/haskell-language-server-wrapper",
+            "args": ["lsp"],
+            "rootPatterns": [
+                "*.cabal",
+                "stack.yaml",
+                "cabal.project",
+                "package.yaml",
+                "hie.yaml",
+                "*.hs"
+            ],
+            "filetypes": ["haskell", "lhaskell"]
+        },
+        "julia": {
+            "filetypes": ["julia", "jl", "git", "ipynb", "jmd"],
+            "command": "julia"
+            // "server":,
+            // "args": [ "--startup-file='~/.julia/config/startup.jl'", "--history-file=no", "-e",
+            //       [["using Pkg", "Pkg.instantiate(); using LanguageServer; Using SymbolServer; depot_path = get(ENV, 'JULIA_DEPOT_PATH',""); project_path = dirname]]]
+        }
   // {{{
       // "pylance": {
       //   "enable": true,
@@ -145,42 +182,10 @@
       //     "python.analysis.diagnosticSeverityOverrides": {},
       //     "python.analysis.useLibraryCodeForTypes": true
       //   }
-      // },
-      // }}}
-    // "bash": {
-    //   "command": "bash-language-server",
-    //   "args": ["start"],
-    //   "filetypes": ["sh"],
-    //   "ignoredRootPaths": ["~/Dev/goProj", "~/Dev/pyProj", "~/Dev/Data"]
-    // },
-    "Haskell": {
-      "command": "~/.local/bin/haskell-language-server",
-      "args": ["lsp"],
-      "rootPatterns": [
-          "*.cabal",
-          "stack.yaml",
-          "cabal.project",
-          "package.yaml",
-          "hie.yaml",
-          "*.hs"
-          ],
-      "filetypes": ["haskell", "lhaskell"]
-    }
-    // "julia": {
-    //     "filetypes": ["julia", "jl"]
-    //     "command": "julia",
-    //     "server"
-    //     "args": [ "--startup-file='~/.julia/config/startup.jl'", "--history-file=no", "-e",
-    //       [["using Pkg"
-    //         Pkg.instantiate()
-    //         using LanguageServer; Using SymbolServer;
-    //         depot_path = get(ENV, "JULIA_DEPOT_PATH", "")
-    //         project_path = dirname
-    //       ]]],
-    // }
+      // }, }}}
   },
-  "git.enableGutters": true,          // already done by GitGutter - The less
-  "git.semanticCommit.scope": true,    // that's loaded into node, the better.,
+  "git.enableGutters": true,
+  "git.semanticCommit.scope": true,
   "git.addGBlameToVirtualText": true,
   "git.changedSign.hlGroup": "GitGutterChange",
   "git.addedSign.hlGroup": "GitGutterAdd",
@@ -220,9 +225,9 @@
     "typeParameter": "\uf728",
     "default":       "\uf29c"
   },
-  "coc.preferences.extensionUpdateCheck": "weekly",
-  "python.autoComplete.extraPaths": [
-    "${env:SPARK_HOME}/python",
-    "${env:SPARK_HOME}/python/pyspark"
-  ]
+  "coc.preferences.extensionUpdateCheck": "weekly"
+  // "python.autoComplete.extraPaths": [
+    // "${env:SPARK_HOME}/python",
+    // "${env:SPARK_HOME}/python/pyspark"
+  // ]
 }
