keeps coming along slowly

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1,5 +1,7 @@
 # vim:fileencoding=utf-8:ft=conf:foldmethod=marker
 
+kitty --listen-on unix:/tmp/kittykitty
+
 # include colorscheme
 include snazzy.conf
 
@@ -10,12 +12,11 @@ map ctrl+k kitten pass_keys.py neighboring_window top ctrl+k
 map ctrl+h kitten pass_keys.py neighboring_window left ctrl+h
 map ctrl+l kitten pass_keys.py neighboring_window right ctrl+l
 
-map ctrl+j kitten pass_keys.py neighboring_window bottom ctrl+j "^.* - nvim$"
-map ctrl+k kitten pass_keys.py neighboring_window top    ctrl+k "^.* - nvim$"
-map ctrl+h kitten pass_keys.py neighboring_window left   ctrl+h "^.* - nvim$"
-map ctrl+l kitten pass_keys.py neighboring_window right  ctrl+l "^.* - nvim$"
+# map ctrl+j kitten pass_keys.py neighboring_window bottom ctrl+j "^.* - nvim$"
+# map ctrl+k kitten pass_keys.py neighboring_window top    ctrl+k "^.* - nvim$"
+# map ctrl+h kitten pass_keys.py neighboring_window left   ctrl+h "^.* - nvim$"
+# map ctrl+l kitten pass_keys.py neighboring_window right  ctrl+l "^.* - nvim$"
 
-kitty --listen-on=unix:/tmp/mykitty
 
 #: Fonts {{{
 
@@ -23,10 +24,11 @@ kitty --listen-on=unix:/tmp/mykitty
 #: individual font faces and even specify special fonts for particular
 #: characters.
 
-font_family      FiraCode-Retina
-bold_font        FiraCode-Bold
-italic_font      MesloLGS-NF-Italic
-bold_italic_font MesloLGS-NF-Bold-Italic 
+font_family      FiraCodeNerdFontComplete-Retina
+bold_font        FiraCodeNerdFontComplete-Bold
+italic_font      MesloLGLDZNerdFontComplete-Italic
+# italic_font      IosevkaNerdFontCompleteM-Bold-Italic
+bold_italic_font MesloLGLDZNerdFontComplete-Bold-Italic
 
 #: You can specify different fonts for the bold/italic/bold-italic
 #: variants. To get a full list of supported fonts use the `kitty
@@ -40,7 +42,7 @@ bold_italic_font MesloLGS-NF-Bold-Italic
 #:     italic_font      Operator Mono Book Italic
 #:     bold_italic_font Operator Mono Medium Italic
 
-font_size 14.0
+font_size 12.0
 
 #: Font size (in pts)
 
@@ -76,6 +78,33 @@ font_size 14.0
 
 # symbol_map U+E0A0-U+E0A2,U+E0B0-U+E0B3 PowerlineSymbols
 
+# symbol_map U+F021-U+F0FF webdings
+# symbol_map U+E000-U+E929,U+10FFFD Material Icons
+symbol_map U+E300-U+E3EB FiraCodeNerdFontComplete-Retina
+# symbol_map U+F100-U+F4F7 Ionicons
+# symbol_map U+F000-U+F2B4 FontAwesome
+# symbol_map U+002A-U+F16E FiraCodeNerdFontComplete-Retina
+# symbol_map U+E903-U+E941,U+E90A-U+E90F,U+E91A-U+E91F,U+E92A-U+E92F,U+E93A-U+E93F FiraCodeNerdFontComplete-Retina
+symbol_map U+23FB-U+23FE,U+2B58,U+E200-U+E2A9,U+E0A0-U+E0A3,U+E0B0-U+E0BF,U+E0C0-U+E0C8,U+E0CC-U+E0CF,U+E0D0-U+E0D2,U+E0D4,U+E700-U+E7C5,U+F000-U+F2E0,U+2665,U+26A1,U+F400-U+F4A8,U+F67C,U+E000-U+E00A,U+F300-U+F313,U+E5FA-U+E62B FiraCodeNerdFontComplete-Retina
+# Powerline Extras
+symbol_map U+E0A0-U+E0A2,U+E0B0-U+E0D4 FiraCodeNerdFontComplete-Retina
+# Devicons
+symbol_map U+E700-U+E7C5 FiraCodeNerdFontComplete-Retina
+# Font Awesome, minus nonicons
+symbol_map U+F000-U+F2E0 FiraCodeNerdFontComplete-Retina
+# Nonicons
+# symbol_map U+F101-U+F208 nonicons
+# Font Awesome Extensions
+symbol_map U+E200-U+E2A9 FiraCodeNerdFontComplete-Retina
+# Linux symbols
+symbol_map U+F300-U+F313 FiraCodeNerdFontComplete-Retina
+# Octicons
+symbol_map U+F400-U+F4A8,U+2665,U+26A1,U+F27C,U+F67C FiraCodeNerdFontComplete-Retina
+# Seti UI + Extras
+symbol_map U+E5FA-U+E62B FiraCodeNerdFontComplete-Retina
+# Material Design Icons
+# symbol_map U+F500-U+FD46
+
 #: Map the specified unicode codepoints to a particular font. Useful
 #: if you need special rendering for some symbols, such as for
 #: Powerline. Avoids the need for patched fonts. Each unicode code
@@ -86,7 +115,7 @@ font_size 14.0
 
 #:     symbol_map codepoints Font Family Name
 
-disable_ligatures cursor
+disable_ligatures never
 
 #: Choose how you want to handle multi-character ligatures. The
 #: default is to always render them.  You can tell kitty to not render
@@ -100,8 +129,7 @@ disable_ligatures cursor
 #:     map alt+2 disable_ligatures_in all never
 #:     map alt+3 disable_ligatures_in tab cursor
 
-font_features FiraCodeNerdFontComplete-Retina ss01 ss02 ss03 ss04 ss05 ss06 ss07 +zero +liga +calt
-# font_features Iosevka
+font_features FiraCodeNerdFontComplete-Retina +ss01 +ss03 +ss04 +ss05 +ss06 +ss07 +liga
 
 #: Choose exactly which OpenType features to enable or disable. This
 #: is useful as some fonts might have features worthwhile in a
@@ -275,15 +303,15 @@ copy_on_select yes
 #: programs, including websites open in your browser can read the
 #: contents of the system clipboard.
 
-strip_trailing_spaces never
+strip_trailing_spaces smart
 
 #: Remove spaces at the end of lines when copying to clipboard. A
 #: value of smart will do it when using normal selections, but not
 #: rectangle selections. always will always do it.
 
-rectangle_select_modifiers ctrl+alt
+# rectangle_select_modifiers ctrl+alt
 
-#: The modifiers to use rectangular selection (i.e. to select text in
+#l: The modifiers to use rectangular selection (i.e. to select text in
 #: a rectangular block with the mouse)
 
 # terminal_select_modifiers shift
@@ -335,7 +363,7 @@ pointer_shape_when_grabbed arrow
 #: in full screen programs that redraw the entire screen on each loop,
 #: because kitty is so fast that partial screen updates will be drawn.
 
-sync_to_monitor no
+sync_to_monitor yes
 
 #: Sync screen updates to the refresh rate of the monitor. This
 #: prevents tearing (https://en.wikipedia.org/wiki/Screen_tearing)
@@ -388,7 +416,7 @@ remember_window_size  yes
 #: suffix of "c" on the width/height values to have them interpreted
 #: as number of cells instead of pixels.
 
-enabled_layouts *
+enabled_layouts all
 
 #: The enabled window layouts. A comma separated list of layout names.
 #: The special value all means all layouts. The first listed layout
@@ -428,7 +456,7 @@ window_margin_width 1.0
 #: visible. Negative values will cause the value of
 #: window_margin_width to be used instead.
 
-window_padding_width 0.9
+window_padding_width 1.0
 
 #: The window padding (in pts) (blank area between the text and the
 #: window border)
@@ -442,12 +470,12 @@ window_padding_width 0.9
 #: placed centrally. A value of top-left means the padding will be on
 #: only the bottom and right edges.
 
-# active_border_color #00ff00
+active_border_color #00ff9b
 
 #: The color for the border of the active window. Set this to none to
 #: not draw borders around the active window.
 
-# inactive_border_color #cccccc
+inactive_border_color #ab2267
 
 #: The color for the border of inactive windows
 
@@ -456,12 +484,12 @@ window_padding_width 0.9
 #: The color for the border of inactive windows in which a bell has
 #: occurred
 
-inactive_text_alpha 0.6
+inactive_text_alpha 0.2
 
 #: Fade the text in inactive windows by the specified amount (a number
 #: between zero and one, with zero being fully faded).
 
-hide_window_decorations window-borders
+hide_window_decorations yes
 
 #: Hide the window decorations (title-bar and window borders) with
 #: yes. On macOS, titlebar-only can be used to only hide the titlebar.
@@ -524,7 +552,7 @@ tab_bar_style powerline
 #: tab. A value of left will switch to the tab to the left of the
 #: closed tab. A value of last will switch to the right-most tab.
 
-# tab_fade 0.25 0.5 0.75 1
+tab_fade 0.25 0.5 0.75 1
 
 #: Control how each tab fades into the background when using fade for
 #: the tab_bar_style. Each number is an alpha (between zero and one)
@@ -533,12 +561,13 @@ tab_bar_style powerline
 #: can change the number of cells used by adding/removing entries to
 #: this list.
 
-tab_separator " "
+tab_powerline_style round
+# tab_separator 
 
 #: The separator between tabs in the tab bar when using separator as
 #: the tab_bar_style.
 
-# tab_title_template {index}: {title}
+tab_title_template {index}:{title[:]}
 
 #: A template to render the tab title. The default just renders the
 #: title. If you wish to include the tab-index as well, use something
@@ -555,11 +584,11 @@ tab_separator " "
 # active_tab_font_style   bold-italic
 # inactive_tab_foreground #444
 # inactive_tab_background #999
-# inactive_tab_font_style normal
+# inactive_tab_font_style italic
 
 #: Tab bar colors and styles
 
-# tab_bar_background none
+tab_bar_background #899
 
 #: Background color for the tab bar. Defaults to using the terminal
 #: background color.
@@ -684,7 +713,7 @@ dim_opacity 0.5
 
 #: Advanced {{{
 
-shell /usr/local/bin/zsh
+shell /usr/local/bin/zsh --login
 
 #: The shell program to execute. The default value of . means to use
 #: whatever shell is set as the default shell for the current user.
@@ -711,7 +740,7 @@ editor /usr/local/bin/nvim
 #: can fail silently because their stdout/stderr/stdin no longer work.
 
 allow_remote_control yes
-
+listen-on unix:/tmp/here_kittykitty
 #: Allow other programs to control kitty. If you turn this on other
 #: programs can control all aspects of kitty, including sending text
 #: to kitty windows, opening new windows, closing windows, reading the
@@ -723,7 +752,7 @@ allow_remote_control yes
 #: you want to prevent programs running on a remote computer over ssh
 #: from controlling kitty.
 
-# env 
+# env
 
 #: Specify environment variables to set in all child processes. Note
 #: that environment variables are expanded recursively, so if you
@@ -734,7 +763,7 @@ allow_remote_control yes
 
 #: The value of MYVAR2 will be a/<path to home directory>/b.
 
-update_check_interval 0.0
+update_check_interval 72
 
 #: Periodically check if an update to kitty is available. If an update
 #: is found a system notification is displayed informing you of the
@@ -751,7 +780,7 @@ update_check_interval 0.0
 #: with respect to the kitty config directory. Environment variables
 #: in the path are expanded.
 
-clipboard_control write-clipboard read-clipboard write-primary read-primary
+clipboard_control write-clipboard write-primary read-clipboard read-primary
 
 #: Allow programs running in kitty to read and write from the
 #: clipboard. You can control exactly which actions are allowed. The
@@ -763,7 +792,7 @@ clipboard_control write-clipboard read-clipboard write-primary read-primary
 #: functionality is a security risk as it means that any program, even
 #: one running on a remote server via SSH can read your clipboard.
 
-# term xterm-kitty
+term xterm-kitty
 
 #: The value of the TERM environment variable to set. Changing this
 #: can break many terminal programs, only change it if you know what
@@ -779,7 +808,7 @@ clipboard_control write-clipboard read-clipboard write-primary read-primary
 
 #: OS specific tweaks {{{
 
-macos_titlebar_color background
+# macos_titlebar_color system
 
 #: Change the color of the kitty window's titlebar on macOS. A value
 #: of system means to use the default system color, a value of
@@ -792,7 +821,7 @@ macos_titlebar_color background
 #: you are probably better off just hiding the titlebar with
 #: hide_window_decorations.
 
-macos_option_as_alt yes
+macos_option_as_alt left
 
 #: Use the option key as an alt key. With this set to no, kitty will
 #: use the macOS native Option+Key = unicode character behavior. This
@@ -805,7 +834,7 @@ macos_option_as_alt yes
 
 #: Hide the kitty window from running tasks (Option+Tab) on macOS.
 
-# macos_quit_when_last_window_closed no
+macos_quit_when_last_window_closed no
 
 #: Have kitty quit when all the top-level windows are closed. By
 #: default, kitty will stay running, even with no open windows, as is
@@ -938,7 +967,7 @@ map kitty_mod+c copy_to_clipboard
 map kitty_mod+v  paste_from_clipboard
 # map kitty_mod+s  paste_from_selection
 # map shift+insert paste_from_selection
-map kitty_mod+o  pass_selection_to_program
+map kitty_mod+o  pass_selection_to_program nvim
 
 #: You can also pass the contents of the current selection to any
 #: program using pass_selection_to_program. By default, the system's
@@ -952,6 +981,7 @@ map kitty_mod+o  pass_selection_to_program
 #: a new kitty window, by using the @selection placeholder::
 
 #:     map kitty_mod+y new_window less @selection
+map kitty_mod+y new_window : next_layout : less -RF @selection
 
 #: }}}
 
@@ -965,7 +995,7 @@ map kitty_mod+o  pass_selection_to_program
 # map kitty_mod+page_down scroll_page_down
 # map kitty_mod+home      scroll_home
 # map kitty_mod+end       scroll_end
-# map kitty_mod+h         show_scrollback
+map kitty_mod+h         show_scrollback
 
 #: You can pipe the contents of the current screen + history buffer as
 #: STDIN to an arbitrary program using the ``launch`` function. For
@@ -1060,7 +1090,7 @@ map kitty_mod+o  pass_selection_to_program
 
 #: Layout management {{{
 
-# map kitty_mod+l next_layout
+map kitty_mod+l next_layout
 
 #: You can also create shortcuts to switch to specific layouts::
 
@@ -1097,27 +1127,27 @@ map kitty_mod+o  pass_selection_to_program
 #: external program or insert it into the terminal or copy it to the
 #: clipboard.
 
-# map kitty_mod+e kitten hints
+map kitty_mod+e kitten hints
 
 #: Open a currently visible URL using the keyboard. The program used
 #: to open the URL is specified in open_url_with.
 
-# map kitty_mod+p>f kitten hints --type path --program -
+map kitty_mod+p>f kitten hints --type path --program -
 
 #: Select a path/filename and insert it into the terminal. Useful, for
 #: instance to run git commands on a filename output from a previous
 #: git command.
 
-# map kitty_mod+p>shift+f kitten hints --type path
+map kitty_mod+p>shift+f kitten hints --type path
 
 #: Select a path/filename and open it with the default open program.
 
-# map kitty_mod+p>l kitten hints --type line --program -
+map kitty_mod+p>l kitten hints --type line --program -
 
 #: Select a line of text and insert it into the terminal. Use for the
 #: output of things like: ls -1
 
-# map kitty_mod+p>w kitten hints --type word --program -
+map kitty_mod+p>w kitten hints --type word --program -
 
 #: Select words and insert into terminal.
 
@@ -1141,9 +1171,9 @@ map kitty_mod+o  pass_selection_to_program
 
 # map kitty_mod+f11    toggle_fullscreen
 # map kitty_mod+f10    toggle_maximized
-# map kitty_mod+u      kitten unicode_input
+map kitty_mod+u      kitten unicode_input
 # map kitty_mod+f2     edit_config_file
-# map kitty_mod+escape kitty_shell window
+map kitty_mod+escape kitty_shell window
 
 #: Open the kitty shell in a new window/tab/overlay/os_window to
 #: control kitty using commands.
