--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,5 +1,10 @@
-set-option -g status-position top
-set-option -sg escape-time 0
+# Setting prefix from C-b to C-a
+set -g prefix C-a
+bind C-a send-prefix
+unbind C-b
+
+set-option -g status-position bottom
+set-option -sg escape-time 10
 # List of plugins
 set -g @tpm_plugins '                     \
     caiogondim/maglev                     \
@@ -26,7 +31,7 @@ setw -g pane-base-index 1
 # *session*, constrain win size to the max. size of any client connected to * that window *
 # Much more reasonable.
 # Cant be used w/ iTerm2
-# setw -g aggressive-resize on
+setw -g aggressive-resize on
 
 # Tile all windows
 unbind =
@@ -46,7 +51,7 @@ set -g renumber-windows on
 # set vi mode for copy mode
 
 # reload tmux.conf w/ key press
-bind C-r source-file ~/.tmux.conf \; display "Reloaded!"
+bind r source-file ~/.tmux.conf \; display "Reloaded!"
 
 # more settings to make copy-mode more vim-esque
 setw -g mode-keys vi
@@ -61,8 +66,8 @@ bind-key -T copy-mode-vi 0 send -X back-to-indentation
 # bind C-y run 'tmux save-buffer - | pbcopy '
 
 # Buffers to/from mac clipboard, yay pragprog tmux book reading!
-bind C-c run "tmux save-buffer - | reattach-to-user-namespace pbcopy"
-bind C-v run "tmux set-buffer $(reattach-to-user-namespace pbpaste); tmux paste-buffer"
+# bind C-c run "tmux save-buffer - | reattach-to-user-namespace pbcopy"
+# bind C-v run "tmux set-buffer $(reattach-to-user-namespace pbpaste); tmux paste-buffer"
 
 
 ## Testing FZF Integration
@@ -75,14 +80,10 @@ bind-key 0 run-shell "tmux-fzf-panes ||:"
 
 
 
-# Setting prefix from C-b to C-a
-set -g prefix C-a
-bind C-a send-prefix
-unbind C-b
 
-set -g @fzf-maccy-bind '@'
+# set -g @fzf-maccy-bind '@'
 
-set -g @fzf-maccy-layout '-p70%'
+# set -g @fzf-maccy-layout '-p70%'
 
 # set -g default-terminal "screen-256color"
 # set -ga terminal-overrides ",*256color:Tc"
@@ -98,19 +99,11 @@ bind - resize-pane -D 5
 bind + resize-pane -U 5
 
 # # smart pane switching with awareness of vimsplits
-# bind -n C-h run "(tmux display-message -p '#{pane_current_command}' | grep iq nvim && tmux send-keys C-h) || tmux select-pane -L"
-
-# bind -n C-j run "(tmux display-message -p '#{pane_current_command}' | grep iq nvim && tmux send-keys C-j) || tmux select-pane -D"
-
-# bind -n C-k run "(tmux display-message -p '#{pane_current_command}' | grep iq nvim && tmux send-keys C-k) || tmux select-pane -U"
-
-# bind -n C-l run "(tmux display-message -p '#{pane_current_command}' | grep iq nvim && tmux send-keys C-l) || tmux select-pane -R"
-
-# bind -n C-\ run "(tmux display-message -p '#{pane_current_command}' | grep iq nvim && tmux send-keys 'C-\\') || tmux select-pane -l""')"
-
-
-
-
+bind -n C-h run "(tmux display-message -p '#{pane_current_command}' | grep -iq nvim && tmux send-keys C-h) || tmux select-pane -L"
+bind -n C-j run "(tmux display-message -p '#{pane_current_command}' | grep -iq nvim && tmux send-keys C-j) || tmux select-pane -D"
+bind -n C-k run "(tmux display-message -p '#{pane_current_command}' | grep -iq nvim && tmux send-keys C-k) || tmux select-pane -U"
+bind -n C-l run "(tmux display-message -p '#{pane_current_command}' | grep -iq nvim && tmux send-keys C-l) || tmux select-pane -R"
+bind -n C-\\ run "(tmux display-message -p '#{pane_current_command}' | grep -iq nvim && tmux send-keys 'C-\\') || tmux select-pane -l""')"
 
 
 if "test ! -d ~/.tmux/plugins/tpm" \
