--- a/.tmux.conf
+++ b/.tmux.conf
@@ -6,7 +6,7 @@ unbind C-b
 set-option -g status-position bottom
 set-option -sg escape-time 10
 # List of plugins
-set -g @tpm_plugins '                     \
+# set -g @tpm_plugins '                     \
     caiogondim/maglev                     \
     tmux-plugins/tpm                      \
     tmux-plugins/tmux-sensible            \
@@ -21,8 +21,25 @@ set -g @tpm_plugins '                     \
     tmux-plugins/tmux-prefix-highlight    \
     junegunn/tmux-fzf-maccy               \
 '
+set -g @open-S 'https://www.google.com/search?q='
+
+set -g @tpm_plugins 'caiogondim/maglev'
+set -g @tpm_plugins 'tmux-plugins/tpm'
+set -g @tpm_plugins 'tmux-plugins/tmux-sidebar'
+set -g @tpm_plugins 'tmux-plugins/tmux-sensible'
+set -g @tpm_plugins 'tmux-plugins/tmux-resurrect'
+set -g @tpm_plugins 'tmux-plugins/tmux-continuum'
+set -g @tpm_plugins 'tmux-plugins/tmux-yank'
+set -g @tpm_plugins 'tmux-plugins/tmux-pain-control'
+set -g @tpm_plugins 'tmux-plugins/tmux-copycat'
+set -g @tpm_plugins 'tmux-plugins/tmux-open'
+set -g @tpm_plugins 'tmux-plugins/tmux-battery'
+set -g @tpm_plugins 'tmux-plugins/tmux-cpu'
+set -g @tpm_plugins 'tmux-plugins/tmux-prefix-highlight'
+set -g @tpm_plugins 'sainnhe/tmux-fzf'
+set -g @tpm_plugins 'junegunn/tmux-fzf-maccy'
 # Start windows & panes at 1, not 0, to match keyboard order w/ tmux window num.
-set -g base-index 1 
+set -g base-index 1
 set -g pane-base-index 1
 setw -g base-index 1
 setw -g pane-base-index 1
@@ -86,7 +103,8 @@ bind-key 0 run-shell "tmux-fzf-panes ||:"
 # set -g @fzf-maccy-layout '-p70%'
 
 # set -g default-terminal "screen-256color"
-# set -ga terminal-overrides ",*256color:Tc"
+set -ga terminal-overrides ",xterm-kitty:Tc"
+# set -ga terminal-overrides ",xterm256-color:Tc"
 
 set -g mouse on
 set-option -g repeat-time 0
