--- a/.config/nvim/.luarc.json
+++ b/.config/nvim/.luarc.json
@@ -5,7 +5,10 @@
         "return-type-mismatch",
         "param-type-mismatch",
         "unused-local",
-        "missing-return"
+        "missing-return",
+        "undefined-doc-param",
+        "cast-local-type",
+        "no-unknown"
     ],
     "Lua.diagnostics.globals": [
         "vim",
@@ -15,7 +18,8 @@
         "before_each",
         "after_each",
         "packer_plugins",
-        "path"
+        "path",
+        "x"
     ],
     "Lua.workspace.checkThirdParty": false
 }
