--- a/.config/kitty/launch-actions.conf
+++ b/.config/kitty/launch-actions.conf
@@ -1,10 +1,33 @@
+# This file defines what happens when we open a file using kitty via the `Open
+# With` in Finder or dragging and dropping the file onto kitty dock icon.
 # Open text files without fragments in the editor
 protocol file
 mime text/*
 # action launch --type=tab --title ${FILE} kitty +kitten icat  ${EDITOR} ${FILE_PATH}'
-action launch --type=tab zsh -c '${EDITOR} ${FILE_PATH}'
+# action launch --type=tab zsh -c $EDITOR $FILE_PATH
+action launch --type=os-window $EDITOR $FILE_PATH
 
 # Open directories
 protocol file
 mime inode/directory
-action launch --type=tab --cwd $FILE_PATH
+action launch --type=os-window --cwd $FILE_PATH --type=tab
+
+# open image files with icat
+protocol file
+mime image/*
+action launch --type=os-window zsh -c "export PATH=/opt/homebrew/bin:/opt/homebrew/sbin:$PATH; kitty +kitten icat --hold '$FILE_PATH'"
+
+# open ssh urls with ssh command
+protocol ssh
+action launch --type=os-window ssh $URL
+
+
+# Open script files based on their shebangs
+# protocol file
+# ext sh,command,tool
+# action launch --hold --type=os-window kitty +shebang $FILE_PATH {SHELL}
+
+# open shell specific script files
+# protocol file
+# ext fish,bash,zsh
+# action launch --hold --type=os-window kitty +shebang $FILE_PATH __ext__
